[project]
name = "Fake-Horion"
version = "0.1.0"
description = ""
authors = [
    {name = "diamond261",email = "diamond261@diamond.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"